[build-system]
requires = ["setuptools>=61.0", "pyyaml>=6.0", "flake8>=6.0.0", "flake8-pytest>=1.4"]
build-backend = "setuptools.build_meta"

[project]
name = "michaelstuffer98_apa102_tcp_server"
version = "0.0.1"
authors = [
  { name="Michael Stuffer", email="michi_stuffer@outlook.de" },
]
description = "Server that consumes UDP and TCP stream for audio data and commands"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/michaelstuffer98/apa102_tcp_server"
"Bug Tracker" = "https://github.com/michaelstuffer98/apa102_tcp_server/issues"