[metadata]
name = michaelstuffer98.apa102_tcp_server
author = Michael Stuffer
author_email = michi_stuffer@outlook.de
url = https://github.com/michaelstuffer98/apa102_tcp_server
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End User
    License :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    pyyaml==6.0.0
    apa102_pi==2.5.1

[options.entry_points]
console_scripts =
    apa102_server = apa102_tcp_server.led_audio_controller:main

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E266
exclude = build,.git,__pycache__,.vscode,.pytest_cache,*.egg-info
